Introduce Query Api version to discovery endpoint ()
Currently, clients are not capable of detect which version of Query API
is running on the server apart of derive this information from the Neo4j
version or trial and error.

This change introduces the `query_api_versions` field to the discovery
endpoint. With this information, clients can detect the versions of
query api running on the server. The endpoint will announce the latest
minor of each major supported version.

Along with this field, the `query_api` was added so clients can compose
the query endpoint for the given major version they are capable to use.

```
GET http://{server_address}/

{
    "query_api_versions": ["2.1", "3.0"],
    ...
    "bolt_routing": "neo4j://{server_address}:7687",
    "query": "http://{server_address}:7474/db/{databaseName}/query/v2",
    "query_api": "http://{server_address}:7474/db/{databaseName}/query/v{queryApiMajorVersion}",
    ...
}
```